<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_sanbong"
    android:padding="16dp"
    android:id="@+id/add_field"
    >

    <ImageButton
        android:id="@+id/button_back_toolbar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/quay_lai"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/text_title"
        app:layout_constraintEnd_toStartOf="@+id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_title"
        app:tint="@android:color/white"
        tools:ignore="TouchTargetSizeCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/them_sua_san_bong"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <!-- Card chính -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <!-- Tên sân bóng -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_field_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ten_san_bong"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_field_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Giá sân -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_field_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gia_vnd"
                android:layout_marginTop="16dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_field_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Loại sân -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_field_type"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/loai_san"
                android:layout_marginTop="16dp"
                >

                <AutoCompleteTextView
                    android:id="@+id/spinner_field_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="none"
                    tools:ignore="LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck,VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Nút lưu -->
            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/luu"
                android:backgroundTint="@color/primary"
                android:textColor="@android:color/white"
                android:layout_marginTop="24dp"
                style="@style/Widget.MaterialComponents.Button"
                tools:ignore="VisualLintButtonSize" />

            <!-- Nút quay lại -->

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>
